--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,8 @@
 // Home Content
 
 .home {
+  padding-top: 90px;
+
 
   .intro {
 
