--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@ nav {
   .flex-col();
   background-color: @nav-bg;
   border-bottom: 1px solid @nav-border;
+  position: fixed;
+  width: 100%;
+  background: rgba(246, 246, 246, .5);
+
   h1{
 
     font-size: 4rem;
